ricdeployment/ric-dep/kong-ingress/ingress-upgrade.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    networking.k8s.io/ingress.class: kong
  creationTimestamp: "2023-07-12T04:58:54Z"
  generation: 7
  name: ingress-api
  namespace: ricplt
  resourceVersion: "1745611"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: service-ricplt-xapp-onboarder-http
            port:
              number: 8888
        path: /onboard
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricplt-appmgr-http
            port:
              number: 8080
        path: /appmgr
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nearrtric-ui
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nonrtric-ui
            port:
              number: 8087
        path: /nonrtric
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricplt-xapp-onboarder-http
            port:
              number: 8080
        path: /delete
        pathType: ImplementationSpecific
      - backend:
          service:
            name: r4-infrastructure-prometheus-server
            port:
              number: 9090
        path: /prometheus
        pathType: ImplementationSpecific
      - backend:
          service:
            name: r4-infrastructure-kube-state-metrics
            port:
              number: 8080
        path: /metrics
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricplt-a1mediator-http
            port:
              number: 10000
        path: /a1mediator
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricplt-rtmgr-http
            port:
              number: 3800
        path: /rtmgr
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricplt-submgr-http
            port:
              number: 3800
        path: /submgr
        pathType: ImplementationSpecific
      - backend:
          service:
            name: service-ricxapp-kpimon-go-http
            port:
              number: 8080
        path: /kpimon
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 35.238.59.45
---
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name: ingress-api
  namespace: ricplt
route:
  methods:
  - POST
  - PUT
  - DELETE
  - PATCH
  - GET
  - OPTIONS
  protocols:
  - https
  - http
  strip_path: true
  preserve_host: true
proxy:
  protocol: https
