ricdeployment/ric-dep/kong-ingress/ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: "2023-07-12T04:58:54Z"
  generation: 7
  name: ingress-api
  namespace: ricplt
  resourceVersion: "1745611"
spec:
  rules:
          #  - host: near-rt-test.vvdntech.com
  - http:
      paths:
      - backend:
          serviceName: service-ricplt-xapp-onboarder-http
          servicePort: 8888
        path: /onboard
      - backend:
          serviceName: service-ricplt-appmgr-http
          servicePort: 8080
        path: /appmgr
      - backend:
          serviceName: nearrtric-ui
          servicePort: 8081
        path: /
      - backend:
          serviceName: nonrtric-ui
          servicePort: 8087
        path: /nonrtric
      - backend:
          serviceName: service-ricplt-xapp-onboarder-http
          servicePort: 8080
        path: /delete
      - backend:
          serviceName: r4-infrastructure-prometheus-server
          servicePort: 9090
        path: /prometheus
      - backend:
          serviceName: r4-kube-state-metrics
          servicePort: 8080
        path: /metrics
      - backend:
          serviceName: r4-grafana
          servicePort: 3000
        path: /grafana
      - backend:
          serviceName: service-ricplt-a1mediator-http
          servicePort: 10000
        path: /a1mediator
      - backend:
          serviceName: service-ricplt-rtmgr-http
          servicePort: 3800
        path: /rtmgr
      - backend:
          serviceName: service-ricplt-submgr-http
          servicePort: 8088
        path: /submgr
      - backend:
          serviceName: service-ricxapp-kpimon-go-http
          servicePort: 8080
        path: /kpimon
      - backend:
          serviceName: service-ricplt-alarmmanager-http
          servicePort: 8080
        path: /alarm
      - backend:
          serviceName: service-ricplt-e2mgr-http
          servicePort: 3800
        path: /e2mgr
      - backend:
          serviceName: service-ricplt-appmgr-http
          servicePort: 8080
        path: /appmgr
      - backend:
          serviceName: service-ricplt-e2term-prometheus-alpha
          servicePort: 8088
        path: /e2term
      - backend:
          serviceName: service-ricplt-o1mediator-tcp-netconf
          servicePort: 830
        path: /o1mediator
      - backend:
          serviceName: service-ricplt-vespamgr-http
          servicePort: 8080
        path: /vespamgr
      - backend:
          serviceName: r4-xapp-authenticator
          servicePort: 5000
        path: /authenticator
      - backend:
          serviceName: service-ricxapp-rc-http
          servicePort: 8080
        path: /rc

#  tls:
#  - hosts:
#    - near-rt-test.vvdntech.com
#    secretName: letsencrypt-prod


status:
  loadBalancer:
    ingress:
    - ip: 35.238.59.45

---

apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name:  ingress-api
  namespace: ricplt
route:
  methods:
  - POST
  - PUT
  - DELETE
  - PATCH
  - GET
  - OPTIONS
  protocols:
  - https
  - http
  strip_path: true
  preserve_host: true

proxy:
  protocol: https
